# Commander-Genius

./: .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .project  <deploy.>  AndroidAppSettings.cfg  Antbuild.godspeed.ui  CMakeCache.txt  CMakeLists.txt  COPYRIGHT  CommanderGeniusBanner.xcf  FindSDL2_image.cmake  Info.plist  LICENSE  Makefile  README  README.html  README.in  README.md  V0.4.icns  bugs.txt  build.cmake  buildMacOsBundle.sh  changelog.txt  cmake_install.cmake  createReleases.sh  createTestVersions.sh  createVersion.sh  debianBuild.sh  full_cleanup.sh  future.txt  get_version.sh  icotool  install.cmake  launchCGonMacOs.sh  makeAllBuilds.sh  makebundleable.sh  package.cmake  readme.txt  (+7 more)
GsKit/: CMakeLists.txt  GsKit.cbp  LICENSE
GsKit/CMake/: FindSDL2.cmake  FindSDL2_ttf.cmake  cotire.cmake
GsKit/base/: CInput.cpp  CInput.h  CMakeLists.txt  Configurator.h  GsApp.cpp  GsApp.h  GsArguments.cpp  GsArguments.h  GsEngine.cpp  GsEngine.h  GsEvent.cpp  GsEvent.h  GsEventContainer.cpp  GsEventContainer.h  GsGear.h  GsLogging.cpp  GsLogging.h  GsLua.cpp  GsLua.h  GsPython.cpp  GsPython.h  GsTTFSystem.cpp  GsTTFSystem.h  GsTimer.cpp  GsTimer.h  GsVirtualinput.h  InputEvents.h  PointDevice.h  Singleton.h  TypeDefinitions.cpp  TypeDefinitions.h  Vector2D.h
GsKit/fileio/: CConfiguration.cpp  CConfiguration.h  CMakeLists.txt  IniReader.cpp  IniReader.h  ResourceMgmt.cpp  ResourceMgmt.h  fileio.cpp
GsKit/graphics/: CColorMerge.h  CDimDark.cpp  CFlash.cpp  CFlash.h  CMakeLists.txt  CPixelate.h  CScrollEffect.cpp  CScrollEffect.h  GsBitmap.cpp  GsBitmap.h  GsCursor.cpp  GsCursor.h  GsDynColor.cpp  GsDynColor.h  GsFont.cpp  GsFont.h  GsFont4x.xpm  GsFont8x.xpm  GsFontLegacy.cpp  GsFontLegacy.h  GsGametext.cpp  GsGametext.h  GsGraphics.cpp  GsGraphics.h  GsPalette.cpp  GsPalette.h  GsScrollsurface.cpp  GsScrollsurface.h  GsSprite.cpp  GsSprite.h  GsSurface.cpp  GsSurface.h  GsTexture.cpp  GsTexture.h  GsTextureElem.cpp  GsTextureElem.h  GsTilemap.cpp  GsTilemap.h  GsTrueTypeFont.cpp  GsTrueTypeFont.h  (+2 more)
GsKit/widgets/: CMakeLists.txt  GsBanner.cpp  GsBanner.h  GsBaseMenu.cpp  GsBaseMenu.h  GsBitmap.cpp  GsBitmap.h  GsBitmapBox.cpp  GsBitmapBox.h  GsBitmapButton.cpp  GsBitmapButton.h  GsButton.cpp  GsButton.h  GsCheckbox.cpp  GsCheckbox.h  GsComboSelection.cpp  GsComboSelection.h  GsControl.cpp  GsControl.h  GsControlsManager.cpp  GsControlsManager.h  GsDialog.cpp  GsDialog.h  GsFrame.cpp  GsFrame.h  GsInputText.cpp  GsInputText.h  GsMenuController.cpp  GsMenuController.h  GsMiniTextViewer.cpp  GsMiniTextViewer.h  GsNumberControl.cpp  GsNumberControl.h  GsProgressbar.cpp  GsProgressbar.h  GsRegister.cpp  GsRegister.h  GsScrollbar.cpp  GsScrollbar.h  GsScrollingFrame.cpp  (+21 more)
lib/GsKit/: CMakeLists.txt
src/: Base64.cpp  Base64.h  CCGenius.cpp  CCGenius.h  CGLogo.rc  CGame.cpp  CGame.h  CGameControl.cpp  CGameControl.h  CGenius.cpp  CGeniusEntry.cpp  CGeniusEntry.h  CGraphics.cpp  CGraphics.h  CLatch.cpp  CLatch.h  CLogFile.cpp  CLogFile.h  CMakeLists.txt  CResourceLoader.cpp  CResourceLoader.h  CRingBuffer.cpp  CRingBuffer.h  CSingleton.h  CStartScreen.cpp  CVec.h  Color.h  ConfigHandler.cpp  ConfigHandler.h  CrashHandler.cpp  CrashHandler.h  Debug.cpp  Debug.h  Event.h  EventQueue.h  FindFile.cpp  FindFile.h  Functors.h  Iterator.h  MathLib.h  (+45 more)
src/ai/: autoray.cpp  baby.cpp  baby.h  balljack.cpp  balljack.h  bear.cpp  butler.cpp  door.cpp  door.h  earth.cpp  earth.h  enemydata.h  fireball.cpp  foob.cpp  garg.cpp  gotpoints.cpp  icebit.cpp  icecannon.cpp  icecannon.h  icechunk.cpp  meep.cpp  mother.cpp  nessie.cpp  ninja.cpp  platform.cpp  platvert.cpp  ray.cpp  ray.h  rope.cpp  scrub.cpp  se.cpp  se.h  sndwave.cpp  tank.cpp  tankep2.cpp  teleport.cpp  vort.cpp  vort.h  vortelite.cpp  vortelite.h  (+2 more)
src/audio/: Audio.cpp  Audio.h  CAudioResources.cpp  CAudioResources.h
src/cinematics/: BlowupWorld.cpp  CommonEnding.cpp  CommonEnding.h  EndingSequenceEp1.cpp  EndingSequenceEp1.h  EndingSequenceEp2.cpp  EndingSequenceEp2.h  EndingSequenceEp3.cpp  EndingSequenceEp3.h
src/common/: ActionFormat.cpp  ActionFormat.h  CActionFormat.cpp  CActionFormat.h  CAudioResources.cpp  CAudioResources.h  CBehaviorEngine.cpp  CBehaviorEngine.h  CGameLauncher.cpp  CGameLauncher.h  CHUD.cpp  CHUD.h  CMakeLists.txt  CMap.cpp  CMap.h  CMapLoader.cpp  CMapLoader.h  CMenu.cpp  CMenu.h  CMenuVorticon.cpp  CMenuVorticon.h  CObject.cpp  CObject.h  CObjectCollision.cpp  CPhysicsSettings.cpp  CPhysicsSettings.h  CPlane.cpp  CPlane.h  CPlayer.cpp  CPlayer.h  CPlayerItems.cpp  CPlayerLevel.cpp  CPlayerWM.cpp  CSettings.cpp  CSettings.h  CSpriteObject.cpp  CSpriteObject.h  CStatusScreen.cpp  CStatusScreen.h  CTeleporter.cpp  (+14 more)
src/core/: CBaseEngine.cpp  CBaseEngine.h  CGameControl.cpp  CGameControl.h  CGameLauncherMenu.cpp  CGameLauncherMenu.h  CGameMain.cpp  CGameMain.h  CGameMode.cpp  CGameMode.h  CGamePassiveMode.cpp  CGamePassiveMode.h  CGamePlayMode.cpp  CGamePlayMode.h  GameEngine.cpp  GameEngine.h  LogicDrawSplitter.h
src/dialog/: CDialog.cpp  CDialog.h  CDlgFrame.cpp  CDlgFrame.h  CDlgObject.cpp  CDlgObject.h  CDlgOptionText.cpp  CDlgOptionText.h  CMakeLists.txt  CMessageBox.cpp  CMessageBox.h  CTextBox.cpp  CTextBox.h  CTextViewer.cpp  CTextViewer.h  CWindow.cpp  CWindow.h
src/engine/: BgMsg.h  CCamera.cpp  CCamera.h  CEGAGraphics.cpp  CEGAGraphics.h  CEGALatch.cpp  CEGASprit.cpp  CEGASprit.h  CEvent.cpp  CEvent.h  CEventContainer.cpp  CEventContainer.h  CGameLauncher.cpp  CGameLauncher.h  CIntro.cpp  CIntro.h  CMakeLists.txt  CMessages.cpp  CMessages.h  CPassive.cpp  CPassive.h  CPlanes.cpp  CPlanes.h  CTitle.cpp  CTitle.h  downloadgui.cpp  downloadgui.h  gamedownloader.cpp  gamedownloader.h  gamelauncher.menu  gameselector.cpp  gameselector.h  sounds.h  spritedefines.h  xxd.c
src/fileio/: CCarmack.cpp  CCarmack.h  CConfiguration.cpp  CConfiguration.h  CExeFile.cpp  CExeFile.h  CHuffman.cpp  CHuffman.h  CMakeLists.txt  CParser.cpp  CParser.h  CPatcher.cpp  CPatcher.h  CPatcherUtils.cpp  CRLE.cpp  CRLE.h  CSaveGameController.cpp  CSaveGameController.h  CSavedGame.cpp  CSavedGame.h  CSavedGameCoder.h  (+19 more)
(+4436 files in other folders)
